--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav-header">
     <a class="logo" href="./index.html">Web<span class="hedearspan">Studio</span></a>
       <ul class="nav-list">
-        <li class="header-li"><a class="link" href="#">Studio</a></li>
+        <li class="header-li active-link"><a class="link" href="#">Studio</a></li>
         <li class="header-li"><a class="link" href="#">Portfolio</a></li>
         <li class="header-li"><a class="link" href="#">Contacts</a></li>
       </ul>
@@ -51,6 +51,9 @@
     <h2 class="visually-hidden">Advantages</h2>
     <ul class="list-section-two">
         <li class="link-two">
+            <svg class="sectiontwo-logo-item">
+                <use href="./images/sprite.svg#icon-antenna" width="24" height ="24"></use>
+            </svg>
             <h3 class="twoh">
                 Strategy
             </h3>
