--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
     <h2 class="visually-hidden">Advantages</h2>
     <ul class="list-section-two">
         <li class="link-two">
+            <div class="sectiontwo-icon-svg">
             <svg class="sectiontwo-logo-item">
-                <use href="./images/sprite.svg#icon-antenna" width="24" height ="24"></use>
+                <use href="./images/icons.svg#icon-antenna" width="64" hieght ="64"></use>
             </svg>
+            </div>
             <h3 class="twoh">
                 Strategy
             </h3>
@@ -63,6 +65,11 @@
             </p>
         </li>
         <li class="link-two">
+            <div class="sectiontwo-icon-svg">
+                <svg class="sectiontwo-logo-item">
+                    <use href="./images/icons.svg#icon-astronaut" width="64" hieght="64"></use>
+                </svg>
+            </div>
             <h3 class="twoh">
                 Punctuality
             </h3>
@@ -71,6 +78,11 @@
             </p>
         </li>
         <li class="link-two">
+            <div class="sectiontwo-icon-svg">
+                <svg class="sectiontwo-logo-item">
+                    <use href="./images/icons.svg#icon-clock" width="64" hieght="64"></use>
+                </svg>
+            </div>
             <h3 class="twoh">
                 Diligence
             </h3>
@@ -79,6 +91,11 @@
             </p>
         </li>
         <li class="link-two">
+            <div class="sectiontwo-icon-svg">
+                <svg class="sectiontwo-logo-item">
+                    <use href="./images/icons.svg#icon-diagram" width="64" hieght="64"></use>
+                </svg>
+            </div>
             <h3 class="twoh">
                 Technologies
             </h3>
