--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="nav-header">
     <a class="logo" href="./index.html">Web<span class="hedearspan">Studio</span></a>
       <ul class="nav-list">
-        <li class="header-li active-link"><a class="link" href="#">Studio</a></li>
+        <li class="header-li"><a class="link active-link" href="#">Studio</a></li>
         <li class="header-li"><a class="link" href="#">Portfolio</a></li>
         <li class="header-li"><a class="link" href="#">Contacts</a></li>
       </ul>
@@ -53,7 +53,7 @@
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
             <svg class="sectiontwo-logo-item">
-                <use href="./images/icons.svg#icon-antenna" width="64" hieght ="64"></use>
+                <use href="./images/icons.svg#icon-antenna"></use>
             </svg>
             </div>
             <h3 class="twoh">
@@ -67,7 +67,7 @@
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
                 <svg class="sectiontwo-logo-item">
-                    <use href="./images/icons.svg#icon-astronaut" width="64" hieght="64"></use>
+                    <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
             </div>
             <h3 class="twoh">
@@ -80,7 +80,7 @@
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
                 <svg class="sectiontwo-logo-item">
-                    <use href="./images/icons.svg#icon-clock" width="64" hieght="64"></use>
+                    <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
             </div>
             <h3 class="twoh">
@@ -93,7 +93,7 @@
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
                 <svg class="sectiontwo-logo-item">
-                    <use href="./images/icons.svg#icon-diagram" width="64" hieght="64"></use>
+                    <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
             </div>
             <h3 class="twoh">
