--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <ul class="list-section-two">
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
-            <svg class="sectiontwo-logo-item">
+            <svg class="sectiontwo-logo-item" width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna"></use>
             </svg>
             </div>
@@ -66,7 +66,7 @@
         </li>
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
-                <svg class="sectiontwo-logo-item">
+                <svg class="sectiontwo-logo-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
             </div>
@@ -79,7 +79,7 @@
         </li>
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
-                <svg class="sectiontwo-logo-item">
+                <svg class="sectiontwo-logo-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
             </div>
@@ -92,7 +92,7 @@
         </li>
         <li class="link-two">
             <div class="sectiontwo-icon-svg">
-                <svg class="sectiontwo-logo-item">
+                <svg class="sectiontwo-logo-item" width="64" height="64">
                     <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
             </div>
