--- a/index.html
+++ b/index.html
@@ -121,6 +121,36 @@
             <p class="threep">
                 Product Designer
             </p>
+            <ul class="sectionthree-items">
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-twitter></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-facebook ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-linkedin></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>    
             </div>
         </li>
         <li class="list-ulr">
@@ -132,6 +162,36 @@
             <p class="threep">
                 Frontend Developer
             </p>
+            <ul class="sectionthree-items">
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-twitter></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-facebook ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-linkedin></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
             </div>
         </li>
         <li class="list-ulr">
@@ -143,6 +203,36 @@
             <p class="threep">
                 Marketing
             </p>
+            <ul class="sectionthree-items">
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-twitter></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-facebook ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-linkedin></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
             </div>
         </li>
         <li class="list-ulr">
@@ -154,6 +244,36 @@
             <p class="threep">
                 UI Designer
             </p>
+            <ul class="sectionthree-items">
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-twitter></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-facebook ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href=./images/icons.svg#icon-linkedin></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
             </div>
         </li>
     </ul>
