--- a/index.html
+++ b/index.html
@@ -285,48 +285,78 @@
     <div class ="container">
     <h2 class="portfolio">Our Portfolio</h2>
     <ul class="portfolio-url">
-    <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio1.jpg" alt="Banking App" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Banking App</h3>
-        <p class="fourp">App</p>
-        </div>
+        <li class="list-portfolio"> 
+            <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio1.jpg" alt="Banking App" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+            <div class="portfolio-cont">
+                    <h3 class="fourh">Banking App</h3>
+                    <p class="fourp">App</p>
+            </div>
+        </li>
+        <li class="list-portfolio"> 
+            <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio2.jpg" alt="Cashless Payment" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+                <div class="portfolio-cont">
+                    <h3 class="fourh">Cashless Payment</h3>
+                    <p class="fourp">Marketing</p>
+                </div> 
+        </li>
+        <li class="list-portfolio"> 
+            <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio3.jpg" alt="Meditation App" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+                <div class="portfolio-cont">
+                    <h3 class="fourh">Meditation App</h3>
+                    <p class="fourp">App</p>
+                </div>
+        </li>
+        <li class="list-portfolio"> 
+            <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio4.jpg" alt="Taxi Service" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+                <div class="portfolio-cont">
+                    <h3 class="fourh">Taxi Service</h3>
+                    <p class="fourp">Marketing</p>
+                </div>
+        </li>
+        <li class="list-portfolio"> 
+            <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio5.jpg" alt="Screen Illustrations" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+                <div class="portfolio-cont">
+                    <h3 class="fourh">Screen Illustrations</h3>
+                    <p class="fourp">Design</p>
+                </div> 
     </li>
     <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio2.jpg" alt="Cashless Payment" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Cashless Payment</h3>
-        <p class="fourp">Marketing</p>
-        </div> 
-    </li>
-    <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio3.jpg" alt="Meditation App" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Meditation App</h3>
-        <p class="fourp">App</p>
-        </div>
-    </li>
-    <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio4.jpg" alt="Taxi Service" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Taxi Service</h3>
-        <p class="fourp">Marketing</p>
-        </div>
-    </li>
-    <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio5.jpg" alt="Screen Illustrations" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Screen Illustrations</h3>
-        <p class="fourp">Design</p>
-        </div> 
-   </li>
-   <li class="list-portfolio"> 
-        <img class="fourimg" src="./images/Portfolio6.jpg" alt="Online Courses" width="360" height="300">
-        <div class="portfolio-cont">
-        <h3 class="fourh">Online Courses</h3>
-        <p class="fourp">Marketing</p>
-        </div>
-    </li>
+        <div class="portfolio-img-container">
+            <img class="fourimg" src="./images/Portfolio6.jpg" alt="Online Courses" width="360" height="300">
+                <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+            </div>
+                <div class="portfolio-cont">
+                    <h3 class="fourh">Online Courses</h3>
+                    <p class="fourp">Marketing</p>
+                </div>
+        </li>
     </ul>
     </div>
 
