--- a/index.html
+++ b/index.html
@@ -124,29 +124,29 @@
             <ul class="sectionthree-items">
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
-                    <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                    <svg width="16" height="16" class="sectionthree-logo-item">
+                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-twitter></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-facebook ></use>
+                        <use href="./images/icons.svg#icon-facebook" ></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-linkedin></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
@@ -166,28 +166,28 @@
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-twitter></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-facebook ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-linkedin></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
@@ -207,28 +207,28 @@
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-twitter></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-facebook ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-linkedin></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
@@ -248,28 +248,28 @@
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use class="icon-top" href=./images/icons.svg#icon-instagram ></use>
+                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-twitter></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-facebook ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="sectionthree-icon">
                 <a class="sectionthree-icon-svg" href="">
                     <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href=./images/icons.svg#icon-linkedin></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
@@ -369,6 +369,41 @@
     <p class="footerp">
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
+    <div class="footer-media">
+        <p class="social-media">
+            Social media
+        </p>
+        <ul class="media-list">
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="sectionthree-icon">
+                <a class="sectionthree-icon-svg" href="">
+                    <svg class="sectionthree-logo-item" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </div>
 </footer>
 </body>
