--- a/index.html
+++ b/index.html
@@ -364,46 +364,49 @@
 <!-- #endregion section 4 -->
 </main>
 <footer class="footer">
-    <div class ="container">
-    <a class="footerlogo" href="./index.html">Web<span class="footerspan">Studio</span></a>
-    <p class="footerp">
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-    </p>
-    <div class="footer-media">
-        <p class="social-media">
-            Social media
-        </p>
-        <ul class="media-list">
-            <li class="sectionthree-icon">
-                <a class="sectionthree-icon-svg" href="">
-                    <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="sectionthree-icon">
-                <a class="sectionthree-icon-svg" href="">
-                    <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="sectionthree-icon">
-                <a class="sectionthree-icon-svg" href="">
-                    <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="sectionthree-icon">
-                <a class="sectionthree-icon-svg" href="">
-                    <svg class="sectionthree-logo-item" width="16" height="16">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
-    </div>
+    <div class ="container footer-main">
+        <div class="footer-content">
+            <a class="footerlogo" href="./index.html">Web<span class="footerspan">Studio</span></a>
+            <p class="footerp">
+                Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+            </p>
+        </div>
+
+        <div class="footer-media">
+            <p class="social-media">
+                Social media
+            </p>
+            <ul class="media-list">
+                <li class="sectionthree-icon">
+                    <a class="sectionthree-icon-svg" href="">
+                        <svg class="sectionthree-logo-item" width="16" height="16">
+                            <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="sectionthree-icon">
+                    <a class="sectionthree-icon-svg" href="">
+                        <svg class="sectionthree-logo-item" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="sectionthree-icon">
+                    <a class="sectionthree-icon-svg" href="">
+                        <svg class="sectionthree-logo-item" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="sectionthree-icon">
+                    <a class="sectionthree-icon-svg" href="">
+                        <svg class="sectionthree-logo-item" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </footer>
 </body>
