--- a/index.html
+++ b/index.html
@@ -377,31 +377,31 @@
                 Social media
             </p>
             <ul class="media-list">
-                <li class="sectionthree-icon">
-                    <a class="sectionthree-icon-svg" href="">
-                        <svg class="sectionthree-logo-item" width="16" height="16">
-                            <use class="icon-top" href="./images/icons.svg#icon-instagram" ></use>
+                <li class="social-item">
+                        <a class="social-link" href="">
+                        <svg class="social-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
-                </li>
-                <li class="sectionthree-icon">
-                    <a class="sectionthree-icon-svg" href="">
-                        <svg class="sectionthree-logo-item" width="16" height="16">
-                            <use href="./images/icons.svg#icon-twitter"></use>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                        <svg class="social-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
-                </li>
-                <li class="sectionthree-icon">
-                    <a class="sectionthree-icon-svg" href="">
-                        <svg class="sectionthree-logo-item" width="16" height="16">
-                            <use href="./images/icons.svg#icon-facebook"></use>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                        <svg class="social-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
-                </li>
-                <li class="sectionthree-icon">
-                    <a class="sectionthree-icon-svg" href="">
-                        <svg class="sectionthree-logo-item" width="16" height="16">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
+                    </li>
+                    <li class="social-item">
+                        <a class="social-link" href="">
+                        <svg class="social-icon" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
